--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Desafio ciclos</title>
 </head>
 <body>
-    <script src="desafio_ciclos.js"></script>
+    <h1>Creando un ciclo</h1>
+    <script src="desafio.js"></script>
 </body>
 </html>
