--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Desafio ciclos</title>
 </head>
 <body>
-    <script src="desafio_ciclos.js"></script>
+    <h1>Proyecto JS-Galería</h1>
+    <script src="desafio.js"></script>
 </body>
 </html>
