Agrego plantilla para ingresar estudiante

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Desafio ciclos</title>
 </head>
 <body>
-    <h1>Proyecto JS-Galería</h1>
-    <script src="desafio.js"></script>
+    <h1>Proyecto JS-Red social para estudiantes</h1>
+
+    <!-- Cards --> 
+
+    <!-- <article class="card">
+    <h3 class="nombreCard">Pablo Paura</h3>
+    <img src="assets/avatar_1.jpg" alt="">
+    <div class="content">
+        <p class="edadCard">48</p>
+        <p class="materiaCard">Matemática</p>
+        <a href="" target="blank">Contactar</a>
+    </div>
+
+ </article> -->
+
+ <div id="alumnosCards"></div>
+    <script src="proyecto.js"></script>
 </body>
-</html>
+</html> 
