Agrego evento a formulario

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <h1>Proyecto JS-Red social para estudiantes</h1>
-
+    <h4>Formulario de registro</h4>
+    <section class="formRegistro">
+        <input class="controles" type="text" name="nombre" id="nombreIngresado" placeholder="Ingresá tu nombre">
+        <input class="controles" type="text" name="apellido" id="apellidoIngresado" placeholder="Ingresá tu apellido">
+        <input class="controles" type="text" name="edad" id="edadIngresada" placeholder="Ingresá tu edad">
+        <input class="controles" type="text" name="materia" id="materiaIngresada" placeholder="Ingresá tu materia favorita">
+        <input class="boton" id= "guardarEstudiante" type="submit" value="Registrarse">
+    </section>
     <!-- Cards --> 
 
     <!-- <article class="card">
@@ -24,6 +31,9 @@
  </article> -->
 
  <div id="alumnosCards"></div>
+
+
+
     <script src="proyecto.js"></script>
 </body>
 </html> 
