agregho librerias-funcion reloj y modos

--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
     </div>
     <div class="nerdiGrafiti">
       <h5>GrafitiMode</h5>
-    <button class="boton"><i class="fa-solid fa-spray-can"></i></button>  
+    <button id="btnGrafiti" class="boton"><i class="fa-solid fa-spray-can"></i></button>  
     <h5>NerdyMode</h5>
-    <button class="boton"><i class="fa-solid fa-glasses"></i></button>
+    <button id="btnNerdy" class="boton"><i class="fa-solid fa-glasses"></i></button>
   </div>
   </header>
 
   <h1>Proyecto JS-Red social para estudiantes</h1>
+
+  <section class="seccionReloj">
+    <div class="reloj">
+      <span id="tiempo">00 : 00 : 00</span>
+
+    </div>
+  </section>
 
   <!-- Registro Alumnos para cards -->
     <h4>Formulario de registro</h4>
@@ -52,7 +59,7 @@
 <!-- Galería       -->
     </section>
     <h4>Galería de compañeros</h4>
-    <div id="alumnosCards">     
+    <div id="alumnosCards" class="galeria">     
     </div>
 <!-- Buscar Amigos -->
    
