--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="grupos">
       <h5 id=>Ver Grupo</h5>
       <button id="verGrupo">
-        <img class="imgBoton" src="assets/iconoGrupo.jpg" alt="Grupo de compañeros">
+        <a id="verGrupo" data-bs-toggle="modal" data-bs-target="#idModal" class="btn btn-secondary"><i class="fa-solid fa-users-line"></i></a>
       </button> 
     </div>
     <div class="nerdiGrafiti">
@@ -71,16 +71,16 @@
     <!-- Modal para alumnos-->
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
   Launch static backdrop modal
-</button>
+</button> -->
 
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="idModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Grupo de trabajo</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Grupo de trabajo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="modal-body">
