--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <input class="boton" id= "mostrarGaleria" type="submit" value="Ver Galería">
         <input class="boton" id= "ocultarGaleria" type="submit" value="Ocultar Galería">
       </div>
+    </section>
 
 <!-- Galería       -->
-    </section>
     <h4>Galería de compañeros</h4>
     <div id="alumnosCards" class="galeria">     
     </div>
@@ -87,8 +87,8 @@
         
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <!-- <button type="button" class="btn btn-primary">Understood</button> -->
       </div>
     </div>
   </div>
@@ -122,7 +122,11 @@
       <input class="controles" type="text" name="notaIngresada" id="notaIngresada" placeholder="Ingresá las notas">
       <input class="boton" id= "calcPromedio" type="submit" value="Calcular">
     </section>
-    
+<!--Biblioteca-->  
+    <section>
+      <h4>Biblioteca</h4>
+      <div id="biblioCards" class="biblioteca"></div>
+    </section>
 
 
 <footer>
